--- a/templates/search_with_ingredients.html
+++ b/templates/search_with_ingredients.html
@@ -18,7 +18,7 @@
 
     <section class="search-ingredients" style="margin-bottom: 100px;">
         <div class="container mt-5">
-            <div class="psotion-relative">
+            <div class="position-relative">
                 <form id="ingredient-search-form" class="d-flex align-items-center mt-4">
                     <!--Search Input-->
                     <input type="text" id="ingredient-input" class="form-control me-2" placeholder="Enter an Ingredient" autocomplete="off">
