--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
             {% block scripts %}{% endblock %}
            
             <!-- My JS -->
-            <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
+            <script src="{{url_for('static', filename='js/ingredient_search.js')}}"></script>
            
             <!-- Footer -->
             <footer class="footer-styling py-5 container-fluid m-0">
