Added basic functionality to search_with_nutrition. Results returned have the nutrition levels below the ones adjusted by the slider. More room for improvement

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,6 +60,7 @@
            
             <!-- My JS -->
             <script src="{{url_for('static', filename='js/ingredient_search.js')}}"></script>
+            <script src="{{url_for('static', filename='js/nutrition_search.js')}}"></script>
            
             <!-- Footer -->
             <footer class="footer-styling py-5 container-fluid m-0">
