--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Do you have ingredients at home, and don't know what to do with it?</h5>
                     <p class="card-text">Search for recipes with those ingredients.</p>
-                    <a href="{{ url_for('search_ingredients') }}" class="btn btn-primary">Try it out!</a>
+                    <a href="{{ url_for('search_with_ingredients') }}" class="btn btn-primary">Try it out!</a>
                 </div>
             </div>
             <div class="card individual-cards">
@@ -34,14 +34,6 @@
                     <h5 class="card-title">Do you intend or need to follow a specific nutrition plan?</h5>
                     <p class="card-text">Search for recipes based on your dietary needs.</p>
                     <a href="{{ url_for('search_nutrition') }}" class="btn btn-primary">Try it out!</a>
-                </div>
-            </div>
-            <div class="card individual-cards">
-                <h4 class="card-header">Meal Planner</h4>
-                <div class="card-body">
-                    <h5 class="card-title">Are you struggling to plan meals?</h5>
-                    <p class="card-text">Plan your meals for the week for a day or for a week.</p>
-                    <a href="{{ url_for('meal_planner') }}" class="btn btn-primary">Try it out!</a>
                 </div>
             </div>
         </div> 
