--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,9 +35,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('search_nutrition') }}">Search with Nutrition</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('meal_planner') }}">Meal Planner</a>
-                    </li>
                 </ul>
               </div>
           </div>
@@ -66,7 +63,8 @@
             <footer class="footer-styling py-5 container-fluid m-0">
                 <div class="container text-light text-center">
                     <p class="display-5 mb-3">Cooked</p>
-                    <small class="text-white-50">&copy; Copyright by Cooked. All rights reserved.</small>
+                    <small class="text-white-50">&copy; Cooked</small> <br>
+                    <small class="text-white-50">Made by Zeeshan</small>
                 </div>
             </footer>
     </div>
