--- a/templates/search_with_ingredients.html
+++ b/templates/search_with_ingredients.html
@@ -39,7 +39,4 @@
             <div id="selected-ingredients" class="mt-3 d-flex flex-wrap"></div>
         </div>
     </section>
-{% endblock %}  <!-- Missing endblock for content -->
-
-{% block scripts %}
-{% endblock %}  <!-- Missing endblock for scripts -->
+{% endblock %}
