--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Do you intend or need to follow a specific nutrition plan?</h5>
                     <p class="card-text">Search for recipes based on your dietary needs.</p>
-                    <a href="{{ url_for('search_nutrition') }}" class="btn btn-primary">Try it out!</a>
+                    <a href="{{ url_for('search_nutrition') }}" class="btn btn-primary try-it-out">Try it out!</a>
                 </div>
             </div>
         </div> 
